@@ -641,6 +641,19 @@ operator|.
 name|mkdirs
 argument_list|()
 expr_stmt|;
+specifier|final
+name|boolean
+name|doSync
+init|=
+name|config
+operator|.
+name|get
+argument_list|(
+literal|"fsdirectory.dosync"
+argument_list|,
+literal|true
+argument_list|)
+decl_stmt|;
 name|directory
 operator|=
 name|FSDirectory
@@ -648,6 +661,10 @@ operator|.
 name|getDirectory
 argument_list|(
 name|indexDir
+argument_list|,
+literal|null
+argument_list|,
+name|doSync
 argument_list|)
 expr_stmt|;
 block|}
