@@ -950,6 +950,10 @@ operator|.
 name|getDirectory
 argument_list|(
 name|dirPath
+argument_list|,
+literal|null
+argument_list|,
+literal|false
 argument_list|)
 expr_stmt|;
 name|runTest
