@@ -747,6 +747,10 @@ operator|.
 name|getDirectory
 argument_list|(
 name|dirName
+argument_list|,
+literal|null
+argument_list|,
+literal|false
 argument_list|)
 decl_stmt|;
 name|IndexSearcher
@@ -854,6 +858,10 @@ operator|.
 name|getDirectory
 argument_list|(
 name|dirName
+argument_list|,
+literal|null
+argument_list|,
+literal|false
 argument_list|)
 decl_stmt|;
 comment|// open writer
@@ -1248,6 +1256,10 @@ operator|.
 name|getDirectory
 argument_list|(
 name|dirName
+argument_list|,
+literal|null
+argument_list|,
+literal|false
 argument_list|)
 decl_stmt|;
 comment|// make sure searching sees right # hits
@@ -1585,6 +1597,10 @@ operator|.
 name|getDirectory
 argument_list|(
 name|dirName
+argument_list|,
+literal|null
+argument_list|,
+literal|false
 argument_list|)
 decl_stmt|;
 name|IndexWriter
@@ -1758,6 +1774,10 @@ name|fullDir
 argument_list|(
 name|outputDir
 argument_list|)
+argument_list|,
+literal|null
+argument_list|,
+literal|false
 argument_list|)
 decl_stmt|;
 name|boolean
