@@ -917,6 +917,10 @@ operator|.
 name|getDirectory
 argument_list|(
 name|indexDir
+argument_list|,
+literal|null
+argument_list|,
+literal|false
 argument_list|)
 decl_stmt|;
 name|IndexThread
