@@ -371,6 +371,10 @@ operator|.
 name|getDirectory
 argument_list|(
 name|indexDir1
+argument_list|,
+literal|null
+argument_list|,
+literal|false
 argument_list|)
 decl_stmt|;
 name|norms
@@ -446,6 +450,10 @@ operator|.
 name|getDirectory
 argument_list|(
 name|indexDir2
+argument_list|,
+literal|null
+argument_list|,
+literal|false
 argument_list|)
 decl_stmt|;
 name|createIndex
@@ -478,6 +486,10 @@ operator|.
 name|getDirectory
 argument_list|(
 name|indexDir3
+argument_list|,
+literal|null
+argument_list|,
+literal|false
 argument_list|)
 decl_stmt|;
 name|createIndex
