@@ -897,6 +897,10 @@ operator|.
 name|getDirectory
 argument_list|(
 name|dirPath
+argument_list|,
+literal|null
+argument_list|,
+literal|false
 argument_list|)
 expr_stmt|;
 name|runStressTest
@@ -944,6 +948,10 @@ operator|.
 name|getDirectory
 argument_list|(
 name|dirPath
+argument_list|,
+literal|null
+argument_list|,
+literal|false
 argument_list|)
 expr_stmt|;
 name|runStressTest
@@ -993,6 +1001,10 @@ operator|.
 name|getDirectory
 argument_list|(
 name|dirPath
+argument_list|,
+literal|null
+argument_list|,
+literal|false
 argument_list|)
 expr_stmt|;
 name|runStressTest
