@@ -953,6 +953,10 @@ operator|.
 name|getDirectory
 argument_list|(
 name|dirName
+argument_list|,
+literal|null
+argument_list|,
+literal|false
 argument_list|)
 expr_stmt|;
 name|runTest
